Spacing and user id

--- a/charityapp_ang/src/app/app.component.html
+++ b/charityapp_ang/src/app/app.component.html
@@ -1,3 +1,5 @@
 <div *ngFor="let user of users">
-<div>{{user.name}}</div>
+<div style = "float: left; width: 100px;">{{user.id}}</div>
+<div style = "float: left;width: 100px;">{{user.name}}</div>
+<br>
 </div>
