--- a/charityapp_ang/src/app/html/starting-page.html
+++ b/charityapp_ang/src/app/html/starting-page.html
@@ -14,7 +14,7 @@
             <a class="nav-link" href="#">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Login</a>
+            <a class="nav-link" routerLink="/login" routerLinkActive="active" ariaCurrentWhenActive="page">Login</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Register</a>
