--- a/charityapp_ang/src/app/html/register-page.html
+++ b/charityapp_ang/src/app/html/register-page.html
@@ -18,23 +18,31 @@
         </div>
       </nav>
     <header>
-        <h1>Good to see you again</h1>
+        <h1>Registration</h1>
     </header>
     <main>
-        <form id="login_form" class="form_class" action="login/login-access.php" method="post">
+        <form id="registration_form" class="form_class" action="login/login-access.php" method="post">
             <div class="form_div">
+                <label>First name:</label>
+                <input class="field_class" name="first_name_text" type="text" placeholder="first name" autofocus>
+                <label>Last name:</label>
+                <input class="field_class" name="last_name_text" type="text" placeholder="last name" autofocus>
                 <label>Login:</label>
                 <input class="field_class" name="login_txt" type="text" placeholder="login" autofocus>
                 <label>Password:</label>
-                <input id="pass" class="field_class" name="password_txt" type="password" placeholder="password">
-                <button class="submit_class" type="submit" form="login_form" onclick="return validarLogin()">Login</button>
+                <input class="field_class" name="password_txt" type="text" placeholder="password">
+                <label>Repeat password:</label>
+                <input class="field_class" name="repeat_password_txt" type="text" placeholder="password">
+                <label>Email:</label>
+                <input class="field_class" name="email_txt" type="text" placeholder="email">
+                <button class="submit_class" type="submit" form="registration_form" onclick="return validarLogin()">Register</button>
             </div>
             <div class="info_div">
-                <p>Don’t have an account? Register <a class="nav-link" routerLink="/register" routerLinkActive="active" ariaCurrentWhenActive="page">here</a></p>
+                <p>if you already have an account login <a class="nav-link" routerLink="/login" routerLinkActive="active" ariaCurrentWhenActive="page">here</a></p>
             </div>
         </form>
     </main>
     <footer>
-        <p>Home page of <a href="">Charity org&trade;</a></p>
+        <p>Desenvolvido por <a href="#">JM_Code&trade;</a></p>
     </footer>
 </body>
