Starting page title

--- a/charityapp_ang/src/app/html/starting-page.html
+++ b/charityapp_ang/src/app/html/starting-page.html
@@ -3,7 +3,7 @@
     <div class="container">
       <a class="navbar-brand" href="#">
         <img src="https://i.ibb.co/dkGDRcN/charity-modern-logo.jpg" alt="charity-modern-logo" border="0"height="36" />
-        Start Bootstrap
+        Charity organisation
     </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
