--- a/charityapp_ang/src/app/html/register-page.html
+++ b/charityapp_ang/src/app/html/register-page.html
@@ -21,24 +21,24 @@
         <h1>Registration</h1>
     </header>
     <main>
-        <form id="registration_form" class="form_class" action="login/login-access.php" method="post">
+        <form #registerForm="ngForm" (ngSubmit)="onRegisterUser(registerForm)" class="form_class">
             <div class="form_div">
                 <label>First name:</label>
-                <input class="field_class" name="first_name_text" type="text" placeholder="first name" autofocus>
+                <input class="field_class" ngModel name="firstName"type="text" placeholder="first name" autofocus>
                 <label>Last name:</label>
-                <input class="field_class" name="last_name_text" type="text" placeholder="last name" autofocus>
+                <input class="field_class" ngModel name="lastName" type="text" placeholder="last name" autofocus>
                 <label>Login:</label>
-                <input class="field_class" name="login_txt" type="text" placeholder="login" autofocus>
+                <input class="field_class" ngModel name="login" type="text" placeholder="login" autofocus>
                 <label>Password:</label>
-                <input class="field_class" name="password_txt" type="text" placeholder="password">
-                <label>Repeat password:</label>
-                <input class="field_class" name="repeat_password_txt" type="text" placeholder="password">
+                <input class="field_class" ngModel name="password" type="text" placeholder="password">
+                <!-- <label>Repeat password:</label>
+                <input class="field_class" ngModel name="repeat_password_txt" type="text" placeholder="password"> -->
                 <label>Email:</label>
-                <input class="field_class" name="email_txt" type="text" placeholder="email">
-                <button class="submit_class" type="submit" form="registration_form" onclick="return validarLogin()">Register</button>
+                <input class="field_class" ngModel name="email" type="text" placeholder="email">
+                <button [disabled]="registerForm.invalid" class="register_button"  type="submit">Register</button>
             </div>
             <div class="info_div">
-                <p>if you already have an account login <a class="nav-link" routerLink="/login" routerLinkActive="active" ariaCurrentWhenActive="page">here</a></p>
+                <p>If you already have an account login <a class="nav-link" routerLink="/login" routerLinkActive="active" ariaCurrentWhenActive="page">here</a></p>
             </div>
         </form>
     </main>
