--- a/charityapp_ang/src/app/html/register-page.html
+++ b/charityapp_ang/src/app/html/register-page.html
@@ -35,7 +35,7 @@
                 <input class="field_class" ngModel name="repeat_password_txt" type="text" placeholder="password"> -->
                 <label>Email:</label>
                 <input class="field_class" ngModel name="email" type="text" placeholder="email">
-                <button [disabled]="registerForm.invalid" class="register_button"  type="submit">Register</button>
+                <button [disabled]="registerForm.form.invalid" class="register_button"  type="submit">Register</button>
             </div>
             <div class="info_div">
                 <p>If you already have an account login <a class="nav-link" routerLink="/login" routerLinkActive="active" ariaCurrentWhenActive="page">here</a></p>
