Some no important details

--- a/charityapp_ang/src/app/html/login-page.html
+++ b/charityapp_ang/src/app/html/login-page.html
@@ -35,6 +35,6 @@
         </form>
     </main>
     <footer>
-        <p>Home page of <a href="">Charity org&trade;</a></p>
+        <p><a href="">Charity org&trade;</a></p>
     </footer>
 </body>
