--- a/charityapp_ang/src/app/html/register-page.html
+++ b/charityapp_ang/src/app/html/register-page.html
@@ -43,6 +43,6 @@
         </form>
     </main>
     <footer>
-        <p>Desenvolvido por <a href="#">JM_Code&trade;</a></p>
+      <p><a href="">Charity org&trade;</a></p>
     </footer>
 </body>
