--- a/charityapp_ang/src/app/html/login-page.html
+++ b/charityapp_ang/src/app/html/login-page.html
@@ -21,13 +21,13 @@
         <h1>Good to see you again</h1>
     </header>
     <main>
-        <form id="login_form" class="form_class" action="login/login-access.php" method="post">
+        <form (submit)="login()"  class="form_class" name="login_form">
             <div class="form_div">
                 <label>Login:</label>
-                <input class="field_class" name="login_txt" type="text" placeholder="login" autofocus>
+                <input class="field_class" for="username" [(ngModel)]="credentials.login" type="text" placeholder="login" name = "username" autofocus>
                 <label>Password:</label>
-                <input id="pass" class="field_class" name="password_txt" type="password" placeholder="password">
-                <button class="submit_class" type="submit" form="login_form" onclick="return validarLogin()">Login</button>
+                <input class="field_class" for="password" [(ngModel)]="credentials.password" type="password" placeholder="password" name = "password">
+                <button class="submit_class" type="submit">Login</button>
             </div>
             <div class="info_div">
                 <p>Don’t have an account? Register <a class="nav-link" routerLink="/register" routerLinkActive="active" ariaCurrentWhenActive="page">here</a></p>
