After login text on starting page is changing from 'Welcome guest' to 'Welcome user'

--- a/charityapp_ang/src/app/html/user-page.html
+++ b/charityapp_ang/src/app/html/user-page.html
@@ -25,7 +25,7 @@
   <div class="container">
     <div class="card border-0 shadow my-5">
       <div class="card-body p-5">
-        <h1 class="fw-light">Welcome {{text}}</h1>
+        <h1 class="fw-light">Place holder text</h1>
         <p class="lead">Short description of organisation</p>
         <p class="lead" style="color:red; "><b>To-do!</b> <br> Some kind of description... </p>
         <p></p>
