--- a/charityapp_ang/src/app/user/user.component.html
+++ b/charityapp_ang/src/app/user/user.component.html
@@ -1,1 +1,5 @@
-<p>user works!</p>
+<p>{{user.firstName}}</p>
+<p>{{user.lastName}}</p>
+<p>{{user.login}}</p>
+<p>{{user.password}}</p>
+<p>{{user.email}}</p>
