--- a/charityapp_ang/src/app/charity-action/charity-action.component.html
+++ b/charityapp_ang/src/app/charity-action/charity-action.component.html
@@ -1,4 +1,3 @@
-<body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light static-top mb-5 shadow">
   <div class="container">
     <a class="navbar-brand" href="#">
@@ -8,10 +7,11 @@
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
+
     <div class="collapse navbar-collapse" id="navbarColor02">
       <ul class="navbar-nav mr-auto">
 <!--        <li class="nav-item active">-->
-<!--          <a class="nav-link" (click)="onOpenModal(null, 'add')">Add Employee <span class="sr-only">(current)</span></a>-->
+<!--          <a class="nav-link" (click)="onOpenModal(null, 'add')">Add Action <span class="sr-only">(current)</span></a>-->
 <!--        </li>-->
       </ul>
     </div>
@@ -25,8 +25,9 @@
   </div>
 </nav>
 <header>
-  <h1>Charity actions</h1>
+  <h1>Our charity actions</h1>
 </header>
+<br>
 <div class="container" id="main-container">
   <div class="row">
     <div *ngFor= "let chAction of charityActions" class="col-md-6 col-xl-3">
@@ -42,8 +43,8 @@
           </div>
         </div>
         <ul class="list-group list-group-flush">
-          <li class="list-group-item"><i class="fa fa-envelope float-right"></i>{{chAction?.endTime}}</li>
-          <li class="list-group-item"><i class="fa fa-phone float-right"></i>Phone : {{chAction?.goal}}</li>
+          <li class="list-group-item"><i class="fa fa-phone float-right"></i>Goal: {{chAction?.goal}}</li>
+          <li class="list-group-item"><i class="fa fa-envelope float-right"></i>Ends on: {{chAction?.endTime}}</li>
         </ul>
 <!--        przyciski-->
 <!--        <div class="card-body">-->
