Charity action display improvements

--- a/charityapp_ang/src/app/charity-action/charity-action.component.css
+++ b/charityapp_ang/src/app/charity-action/charity-action.component.css
@@ -1,10 +1,11 @@
 @import 'https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css';
-@import 'https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css';
+@import 'https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css';
 
 * {
   padding: 0px;
   margin: 0px;
 }
+
 
 body {
   background-color: lightgreen;
@@ -65,7 +66,8 @@ a {
   color: #707070;
 }
 i {
-  color: white;
+  color: coral;
+
 }
 
 a {
