--- a/charityapp_ang/src/app/charity-action/charity-action.component.css
+++ b/charityapp_ang/src/app/charity-action/charity-action.component.css
@@ -33,6 +33,11 @@ a {
   -webkit-box-shadow: 0 1px 2px 0 rgba(0, 0, 0, .05);
   box-shadow: 0 1px 2px 0 rgba(0, 0, 0, .05);
   margin-bottom: 30px;
+  margin-left: 30px;
+  margin-right: 30px;
+}
+.container {
+  margin: auto;
 }
 
 .w-60 {
