--- a/charityapp_ang/src/app/charity-action/charity-action.component.html
+++ b/charityapp_ang/src/app/charity-action/charity-action.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light static-top mb-5 shadow">
   <div class="container">
     <a class="navbar-brand" href="#">
-      <img src="https://i.ibb.co/dkGDRcN/charity-modern-logo.jpg" alt="charity-modern-logo" border="0"height="36" />
+      <img src="https://i.ibb.co/dkGDRcN/charity-modern-logo.jpg" alt="charity-modern-logo" border="0" height="36" />
       Charity organisation
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -32,17 +32,17 @@
   <div class="row">
     <div *ngFor= "let chAction of charityActions" class="col-md-6 col-xl-3 p-1">
       <div class="card m-b-30">
-        <div class="card-body row">
+        <div class="card-body row" style="margin-left: 5px">
 <!--          wyswietlanie zdj-->
 <!--          <div class="col-6">-->
 <!--            <a href=""><img src="{{employee?.imageUrl}}" alt="" class="img-fluid rounded-circle w-60"></a>-->
 <!--          </div>-->
-          <div class="col-6 card-title align-self-center mb-0">
-            <h5>{{chAction?.name}}</h5>
+          <div class="col card-title align-self-center mb-0">
+            <h5 style="text-align: center">{{chAction?.name}}</h5>
             <p class="m-0">{{chAction?.description}}</p>
           </div>
         </div>
-        <ul class="list-group list-group-flush">
+        <ul class="list-group list-group-flush" style="margin-left: 5px">
           <li class="list-group-item"><i class="fa fa-battery-full float-right"></i>Goal: {{chAction?.goal}}</li>
           <li class="list-group-item"><i class="fa fa-calendar float-right"></i>Ends on: {{chAction?.endTime}}</li>
         </ul>
