--- a/charityapp_ang/src/app/user/user.component.html
+++ b/charityapp_ang/src/app/user/user.component.html
@@ -17,7 +17,7 @@
                 <a class="nav-link" routerLink="/charityAction" routerLinkActive="active" ariaCurrentWhenActive="page">Open charity actions</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link"onclick="return logout()">Logout</a>
+                <a class="nav-link"(click)="logout()" routerLinkActive="active" ariaCurrentWhenActive="page">Logout</a>
               </li>
             </ul>
           </div>
