Getting back to user from charity actions

--- a/charityapp_ang/src/app/charity-action/charity-action.component.html
+++ b/charityapp_ang/src/app/charity-action/charity-action.component.html
@@ -10,6 +10,9 @@
 
     <div class="collapse navbar-collapse" id="navbarColor02">
       <ul class="navbar-nav mr-auto">
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/user" routerLinkActive="active" ariaCurrentWhenActive="page">User</a>
+        </li>
 <!--        <li class="nav-item active">-->
 <!--          <a class="nav-link" (click)="onOpenModal(null, 'add')">Add Action <span class="sr-only">(current)</span></a>-->
 <!--        </li>-->
