--- a/charityapp_ang/src/app/user/user.component.html
+++ b/charityapp_ang/src/app/user/user.component.html
@@ -26,3 +26,15 @@
     <header>
         <h1>Welcome {{user.login}}</h1>
     </header>
+    <!-- Page Content -->
+  <div class="container">
+    <div class="card border-0 shadow my-5">
+      <div class="card-body p-5">
+        <p class="lead">User name : {{user.firstName}} {{user.lastName}}</p>
+        <p class="lead">User login : {{user.login}}</p>
+        <p class="lead">User login : {{user.email}}</p>
+        <p></p>
+      </div>
+    </div>
+  </div>
+</body>
