Radio button to choosing of role during registration

--- a/charityapp_ang/src/app/login/login.component.css
+++ b/charityapp_ang/src/app/login/login.component.css
@@ -29,6 +29,17 @@ main {
     background: url(https://upload.wikimedia.org/wikipedia/commons/thumb/0/0b/Mountains-1412683.svg/1280px-Mountains-1412683.svg.png) no-repeat center center;
     background-size: cover;
 }
+.example-radio-group {
+    display: flex;
+    flex-direction: column;
+    margin: 15px 0;
+    align-items: flex-start;
+  }
+  
+  .example-radio-button {
+    margin: 5px;
+  }
+
 .form_class {
     width: 500px;
     padding: 40px;
