--- a/charityapp_ang/src/app/register/register.component.css
+++ b/charityapp_ang/src/app/register/register.component.css
@@ -5,6 +5,16 @@
 body {
     background-color: lightgreen;
 }
+.example-radio-group {
+    display: flex;
+    flex-direction: column;
+    margin: 15px 0;
+    align-items: flex-start;
+  }
+  
+  .example-radio-button {
+    margin: 5px;
+  }
 header {
     background-color: black;
     color: white;
@@ -26,8 +36,9 @@ main {
     justify-content: center;
     height: 75vh;
     width: 100%;
-    background: url(https://upload.wikimedia.org/wikipedia/commons/thumb/0/0b/Mountains-1412683.svg/1280px-Mountains-1412683.svg.png) no-repeat center center;
     background-size: cover;
+    margin-bottom: 50px;
+    margin-top: 90px;
 }
 .form_class {
     width: 500px;
