--- a/charityapp_ang/src/app/register/register.component.html
+++ b/charityapp_ang/src/app/register/register.component.html
@@ -35,6 +35,19 @@
                 <input class="field_class" ngModel name="repeat_password_txt" type="text" placeholder="password"> -->
                 <label>Email:</label>
                 <input class="field_class" ngModel name="email" type="text" placeholder="email">
+
+                <label id="example-radio-group-label">Pick your role</label>
+                <mat-radio-group
+                  aria-labelledby="example-radio-group-label"
+                  class="example-radio-group"
+                  [(ngModel)]="chosenRole"
+                  name = "radio-button">
+                  <mat-radio-button class="example-radio-button" *ngFor="let role of roles" [value]="role">
+                    {{role}}
+                  </mat-radio-button>
+                </mat-radio-group>
+                <div>Your chosen role is {{chosenRole}}</div>
+
                 <button [disabled]="registerForm.form.invalid" class="register_button"  type="submit">Register</button>
             </div>
             <div class="info_div">
