I don't remember something not important

--- a/charityapp_ang/src/app/register/register.component.html
+++ b/charityapp_ang/src/app/register/register.component.html
@@ -45,6 +45,12 @@
                   <mat-radio-button class="example-radio-button" *ngFor="let role of roles" [value]="role">
                     {{role}}
                   </mat-radio-button>
+
+                  <!--
+                  <mat-radio-button class="example-radio-button" value=1 >Donor</mat-radio-button>
+                  <mat-radio-button class="example-radio-button" value=2 >Benefactor</mat-radio-button>
+                  -->
+                  
                 </mat-radio-group>
                 <div>Your chosen role is {{chosenRole}}</div>
 
