--- a/charityapp_ang/src/app/user/user.component.html
+++ b/charityapp_ang/src/app/user/user.component.html
@@ -32,7 +32,7 @@
       <div class="card-body p-5">
         <p class="lead">User name : {{user.firstName}} {{user.lastName}}</p>
         <p class="lead">User login : {{user.login}}</p>
-        <p class="lead">User login : {{user.email}}</p>
+        <p class="lead">User email : {{user.email}}</p>
         <p></p>
       </div>
     </div>
