--- a/charityapp_ang/src/app/charity-action/charity-action.component.html
+++ b/charityapp_ang/src/app/charity-action/charity-action.component.html
@@ -47,7 +47,7 @@
         </div>
         <ul class="list-group list-group-flush" style="margin-left: 5px">
           <li class="list-group-item"><i class="fa fa-battery-full float-right"></i>Goal: {{chAction?.goal}}</li>
-          <li class="list-group-item"><i class="fa fa-calendar float-right"></i>Ends on: {{chAction?.endTime}}</li>
+          <li class="list-group-item"><i class="fa fa-calendar float-right"></i>Ends on: {{chAction?.endDate}}</li>
         </ul>
 <!--        przyciski-->
 <!--        <div class="card-body">-->
@@ -85,8 +85,8 @@
 <!--            <input type="number" ngModel name="goal" class="form-control" id="goal" placeholder="goal" required>-->
 <!--          </div>-->
 <!--          <div class="form-group">-->
-<!--            <label for="endTime">endTime</label>-->
-<!--            <input type="date" ngModel name="endTime" class="form-control" id="endTime" placeholder="endTime" required>-->
+<!--            <label for="endDate">endDate</label>-->
+<!--            <input type="date" ngModel name="endDate" class="form-control" id="endDate" placeholder="endDate" required>-->
 <!--          </div>-->
 <!--          <div class="modal-footer">-->
 <!--            <button type="button" id="add-action-form" class="btn btn-secondary" data-dismiss="modal">Close</button>-->
