--- a/charityapp_ang/src/app/charity-action/charity-action.component.html
+++ b/charityapp_ang/src/app/charity-action/charity-action.component.html
@@ -13,9 +13,9 @@
         <li class="nav-item">
           <a class="nav-link" routerLink="/user" routerLinkActive="active" ariaCurrentWhenActive="page">User</a>
         </li>
-<!--        <li class="nav-item active">-->
-<!--          <a class="nav-link" (click)="onOpenModal(null, 'add')">Add Action <span class="sr-only">(current)</span></a>-->
-<!--        </li>-->
+        <li class="nav-item">
+          <a class="nav-link" (click)="onOpenModal( 'add')">Add Action <span class="sr-only">(current)</span></a>
+        </li>
       </ul>
     </div>
 <!--    <div class="collapse navbar-collapse" id="navbarResponsive">-->
@@ -59,41 +59,43 @@
       </div>
     </div>
   </div>
-
-<!--&lt;!&ndash; Add Charity Action Modal &ndash;&gt;-->
-<!--<div class="modal fade" id="addActionModal" tabindex="-1" role="dialog" aria-labelledby="addActionModalLabel" aria-hidden="true">-->
-<!--  <div class="modal-dialog" role="document">-->
-<!--    <div class="modal-content">-->
-<!--      <div class="modal-header">-->
-<!--        <h5 class="modal-title" id="addActionModalLabel">Add Action</h5>-->
-<!--        <button type="button" class="close" data-dismiss="modal" aria-label="Close">-->
-<!--          <span aria-hidden="true">&times;</span>-->
-<!--        </button>-->
-<!--      </div>-->
-<!--      <div class="modal-body">-->
-<!--        <form #addForm="ngForm" (ngSubmit)="onAddAction(addForm)">-->
-<!--          <div class="form-group">-->
-<!--            <label for="name">Name</label>-->
-<!--            <input type="text" ngModel name="name" class="form-control" id="name" placeholder="Name" required>-->
-<!--          </div>-->
-<!--          <div class="form-group">-->
-<!--            <label for="description">description</label>-->
-<!--            <input type="description" ngModel name="description" class="form-control" id="description" placeholder="description" required>-->
-<!--          </div>-->
-<!--          <div class="form-group">-->
-<!--            <label for="goal">Goal</label>-->
-<!--            <input type="number" ngModel name="goal" class="form-control" id="goal" placeholder="goal" required>-->
-<!--          </div>-->
-<!--          <div class="form-group">-->
-<!--            <label for="endDate">endDate</label>-->
-<!--            <input type="date" ngModel name="endDate" class="form-control" id="endDate" placeholder="endDate" required>-->
-<!--          </div>-->
-<!--          <div class="modal-footer">-->
-<!--            <button type="button" id="add-action-form" class="btn btn-secondary" data-dismiss="modal">Close</button>-->
-<!--            <button [disabled]="addForm.invalid" type="submit" class="btn btn-primary" >Save changes</button>-->
-<!--          </div>-->
-<!--        </form>-->
-<!--      </div>-->
-<!--    </div>-->
-<!--  </div>-->
 </div>
+
+<!-- Add Charity Action Modal -->
+<div class="modal fade" id="addActionModal" tabindex="-1" role="dialog" aria-labelledby="addActionModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="addActionModalLabel">Add Action</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <form #addForm="ngForm" (ngSubmit)="onAddAction(addForm)">
+          <div class="form-group">
+            <label for="name">Name</label>
+            <input type="text" ngModel name="name" class="form-control" id="name" placeholder="Name" required>
+          </div>
+          <div class="form-group">
+            <label for="description">description</label>
+            <input type="description" ngModel name="description" class="form-control" id="description" placeholder="description" required>
+          </div>
+          <div class="form-group">
+            <label for="goal">Goal</label>
+            <input type="number" ngModel name="goal" class="form-control" id="goal" placeholder="goal" required>
+          </div>
+          <div class="form-group">
+            <label for="endDate">endDate</label>
+            <input type="date" ngModel name="endDate" class="form-control" id="endDate" placeholder="endDate" required>
+          </div>
+          <div class="modal-footer">
+            <button type="button" id="add-action-form" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            <button [disabled]="addForm.invalid" type="submit" class="btn btn-primary" >Save changes</button>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
+
