--- a/charityapp_ang/src/app/benefactor-profile/benefactor-browse-actions.component.css
+++ b/charityapp_ang/src/app/benefactor-profile/benefactor-browse-actions.component.css
@@ -1,4 +1,7 @@
 @import "https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css";
+@import 'https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css';
+@import 'https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css';
+
 body {
   background: url('https://source.unsplash.com/twukN12EN7c/1920x1080') no-repeat center center fixed;
   -webkit-background-size: cover;
@@ -6,3 +9,8 @@ body {
   background-size: cover;
   -o-background-size: cover;
 }
+
+.card{
+  border-color: black;
+}
+
