--- a/charityapp_ang/src/app/register/register.component.html
+++ b/charityapp_ang/src/app/register/register.component.html
@@ -11,7 +11,7 @@
           <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ms-auto">
               <li class="nav-item">
-                <a class="nav-link"onclick="return back()" ></a>
+                <a class="nav-link" onclick="return back()" ></a>
               </li>
             </ul>
           </div>
@@ -40,7 +40,7 @@
                 <mat-radio-group
                   aria-labelledby="example-radio-group-label"
                   class="example-radio-group"
-                  ngModel name="userRole">
+                  ngModel name="role">
 
                   <mat-radio-button class="example-radio-button" value=Donor >Donor</mat-radio-button>
                   <mat-radio-button class="example-radio-button" value=Benefactor >Benefactor</mat-radio-button>
