Secific page with charity action informations

--- a/charityapp_ang/src/app/charity-action/charity-action.component.html
+++ b/charityapp_ang/src/app/charity-action/charity-action.component.html
@@ -50,12 +50,12 @@
           <li class="list-group-item"><i class="fa fa-calendar float-right"></i>Ends on: {{chAction?.endDate}}</li>
         </ul>
 <!--        przyciski-->
-<!--        <div class="card-body">-->
-<!--          <div class="float-right btn-group btn-group-sm">-->
-<!--&lt;!&ndash;&lt;!&ndash;            <a (click)="onOpenModal(chAction, 'edit')" class="btn btn-primary tooltips" data-placement="top" data-original-title="Edit"><i class="fa fa-pencil"></i> </a>&ndash;&gt;&ndash;&gt;-->
+        <div class="card-body">
+          <div class="float-right btn-group btn-group-sm">
+            <a (click)="show(chAction.name)" class="btn btn-primary tooltips"  data-placement="top" data-original-title="Show">Show </a>
 <!--&lt;!&ndash;&lt;!&ndash;            <a (click)="onOpenModal(chAction, 'delete')" class="btn btn-secondary tooltips" data-placement="top" data-original-title="Delete"><i class="fa fa-times"></i></a>&ndash;&gt;&ndash;&gt;-->
 <!--&lt;!&ndash;          </div>&ndash;&gt;-->
-<!--        </div>-->
+        </div>
       </div>
     </div>
   </div>
