--- a/charityapp_ang/src/app/user/user.component.html
+++ b/charityapp_ang/src/app/user/user.component.html
@@ -14,6 +14,9 @@
                 <a class="nav-link"onclick="return back()" ></a>
               </li>
               <li class="nav-item">
+                <div *ngIf="user.isBenefactor">
+                  <a class="nav-link" routerLink="/benefactorBrowseActions" routerLinkActive="active" ariaCurrentWhenActive="page">Open charity actions</a>
+                </div>
                 <a class="nav-link" routerLink="/charityAction" routerLinkActive="active" ariaCurrentWhenActive="page">Open charity actions</a>
               </li>
               <li class="nav-item">
@@ -33,6 +36,7 @@
         <p class="lead">User name : {{user.firstName}} {{user.lastName}}</p>
         <p class="lead">User login : {{user.login}}</p>
         <p class="lead">User email : {{user.email}}</p>
+        <p class="lead">User role : {{user.userRole}}</p>
         <p></p>
       </div>
     </div>
