--- a/charityapp_ang/src/app/charity-action/charity-action-applay.component.html
+++ b/charityapp_ang/src/app/charity-action/charity-action-applay.component.html
@@ -19,6 +19,9 @@
               <li class="nav-item">
                 <a class="nav-link" routerLink="/charityAction" routerLinkActive="active" ariaCurrentWhenActive="page">Open charity actions</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link"(click)="logout()" routerLinkActive="active" ariaCurrentWhenActive="page">Logout</a>
+              </li>
             </ul>
           </div>
         </div>
