--- a/charityapp_ang/src/app/charity-action/charity-action-details.component.html
+++ b/charityapp_ang/src/app/charity-action/charity-action-details.component.html
@@ -13,6 +13,9 @@
             <li class="nav-item">
                 <a class="nav-link" (click)="routeR()" routerLinkActive="active" ariaCurrentWhenActive="page">User</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link"(click)="logout()" routerLinkActive="active" ariaCurrentWhenActive="page">Logout</a>
+              </li>
         </ul>
       </div>
     </div>
