--- a/charityapp_ang/src/app/charity-action/charity-action-support.component.html
+++ b/charityapp_ang/src/app/charity-action/charity-action-support.component.html
@@ -10,12 +10,9 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ms-auto">
-          <li class="nav-item">
-            <a class="nav-link" routerLink="/login" routerLinkActive="active" ariaCurrentWhenActive="page">Login</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" routerLink="/register" routerLinkActive="active" ariaCurrentWhenActive="page">Register</a>
-          </li>
+            <li class="nav-item">
+                <a class="nav-link"(click)="logout()" routerLinkActive="active" ariaCurrentWhenActive="page">Logout</a>
+              </li>
         </ul>
       </div>
     </div>
