Bringing back HTTPheader and some aplicationToCharity functionality

--- a/charityapp_ang/src/app/charity-action/charity-action-applay.component.html
+++ b/charityapp_ang/src/app/charity-action/charity-action-applay.component.html
@@ -33,7 +33,7 @@
         <form #applayForm="ngForm" (ngSubmit)="onApplay(applayForm)" class="form_class">
             <div class="form_div">
                 <label>Reason:</label>
-                <input ngModel name="actionName" class="cdk-visually-hidden">
+                <input ngModel name="charityActionName" class="cdk-visually-hidden">
                 <div>
                   <textarea ngModel name="reason" rows = "5" cols="60" type = "text">
                   
