--- a/charityapp_ang/src/app/charity-action/charity-action-applay.component.html
+++ b/charityapp_ang/src/app/charity-action/charity-action-applay.component.html
@@ -39,9 +39,33 @@
                   
                   </textarea>
                 </div>
+
                 <button [disabled]="applayForm.form.invalid" class="register_button"  type="submit">Applay</button>
             </div>
         </form>
+        <div>
+          <label class="btn btn-default">
+            <input type="file" (change)="selectFile($event)" />
+          </label>
+
+          <div class="card">
+            <div class="card-header">List of Files</div>
+
+            <ul
+              class="list-group list-group-flush"
+              *ngFor="let file of fileInfos | async"
+            >
+
+              <li class="list-group-item">
+                <a href="{{ file.url }}">{{ file.name }}</a>
+              </li>
+            </ul>
+
+            <button class="btn btn-success" (click)="upload()">
+              Upload
+            </button>
+        </div>
+        </div>
     </main>
 </body>
 
