Some minor bug fixes

--- a/charityapp_ang/src/app/charity-action/charity-action-details.component.html
+++ b/charityapp_ang/src/app/charity-action/charity-action-details.component.html
@@ -25,9 +25,9 @@
   <div class="container">
     <div class="card border-0 shadow my-5">
       <div class="card-body p-5">
-        <h1 class="fw-light">{{charityAction.name}}</h1>
+        <h1 class="fw-light">{{charityAction?.name}}</h1>
         <p class="lead">Short description of our goal</p>
-        <p class="lead"><b></b> <br> {{charityAction.description}} </p>
+        <p class="lead"><b></b> <br> {{charityAction?.description}} </p>
         <p></p>
         <p class="lead">Example img</p>
         <img src="https://i.ibb.co/dkGDRcN/charity-modern-logo.jpg" alt="charity-modern-logo" border="0"height="50" width="100" />
